# fastapi-subapp-exceptions-show-case

./: pyproject.toml  readme.md
fastapi_subapp_exceptions_show_case/: app.py
tests/: test_app.py
