[tool.poetry]
name = "fastapi-subapp-exceptions-show-case"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = { version = "^0.60.1", extras = [ "requests" ] }

uvicorn = "^0.11.6"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
